gcc/testsuite/g++.dg/cpp0x/initlist-array20.C
// PR c++/112658
// { dg-do compile { target c++11 } }

void f(int*);

int main() {
  using array = int[];
  f(array{42}); // { dg-error "address of temporary array" }
  f((int*)array{42}); // { dg-error "address of temporary array" }
}
